# afids-auto

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Snakefile  config.yml  participants_testing.txt  pyproject.toml  reg_issues.txt  requirements.txt  specs.json  tform_script.py
OAS1_aligned/sub-0010/: sub-0010_T1w_rigid_xfm.mat  sub-0010_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0086/: sub-0086_T1w_rigid_xfm.mat  sub-0086_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0101/: sub-0101_T1w_rigid_xfm.mat  sub-0101_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0114/: OAS1-0114_MR1_T1_MEAN_mni_rigid.fcsv  sub-0114_T1w_rigid_xfm.mat  sub-0114_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0117/: sub-0117_T1w_rigid_xfm.mat  sub-0117_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0145/: sub-0145_T1w_rigid_xfm.mat  sub-0145_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0177/: OAS1-0177_MR1_T1_MEAN_mni_rigid.fcsv  sub-0177_T1w_rigid_xfm.mat  sub-0177_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0180/: OAS1-0180_MR1_T1_MEAN_mni_rigid.fcsv  sub-0180_T1w_rigid_xfm.mat  sub-0180_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0200/: OAS1-0200_MR1_T1_MEAN_mni_rigid.fcsv  sub-0200_T1w_rigid_xfm.mat  sub-0200_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0216/: OAS1-0216_MR1_T1_MEAN_mni_rigid.fcsv  sub-0216_T1w_rigid_xfm.mat  sub-0216_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0239/: sub-0239_T1w_rigid_xfm.mat  sub-0239_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0249/: sub-0249_T1w_rigid_xfm.mat  sub-0249_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0255/: OAS1-0255_MR1_T1_MEAN_mni_rigid.fcsv  sub-0255_T1w_rigid_xfm.mat  sub-0255_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0256/: OAS1-0256_MR1_T1_MEAN_mni_rigid.fcsv  sub-0256_T1w_rigid_xfm.mat  sub-0256_T1w_rigid_xfm_slicer.txt
OAS1_aligned/sub-0263/: sub-0263_T1w_rigid_xfm.mat  sub-0263_T1w_rigid_xfm_slicer.txt
afids-auto-apply/: run.py
afids-auto-train/: pipeline_description.json
auto-afids/: pipeline_description.json  run.py
auto-afids-train/: pipeline_description.json  run.py
config/: config.yml
resources/: subject_data.db
workflow/: Snakefile
(+474 files in other folders)
