[tool.poetry]
name = "auto-afids"
version = "0.1.0-pre.1"
description = "SnakeBIDS App for automatic anatomical fiducial (AFIDs) placement"
authors = ["Daniel Cao, Tristan Kuehn, Greydon Gilmore, Jonathan Lau"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
snakemake = "~6.4"
snakebids = "~0.4"
numpy = "~1.21"
pybids = "~0.14"
pandas = "~1.3"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
pytest-console-scripts = "^1.2"
pytest = "^6.2"
black = "^21.10b0"
pylint = "^2.11"
isort = "^5.10"
poethepoet = "^0.10"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
setup = "pre-commit install"
quality = { shell = "isort c3d_train/*.py && black c3d_train" }

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.master]
ignore-patterns = "^[0-9][0-9]+_,^test_"

[tool.pylint.messages_control]
disable = """
    missing-function-docstring,
    missing-module-docstring,
    fixme
"""
